Add download file route
