# docs/swagger.json
@@ -250,6 +250,64 @@
                 }
             }
         },
+        "/torrents/{infoHash}/files/{file}/download": {
+            "get": {
+                "description": "download file from torrent give its id",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Download Torrent File",
+                "operationId": "download-file",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "torrent info hash",
+                        "name": "infoHash",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "file id",
+                        "name": "file",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "buffer file",
+                        "name": "buffer",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.MessageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/torrents/{infoHash}/remove": {
             "get": {
                 "description": "remove torrent from service",
@@ -471,6 +529,10 @@
         "settings.Settings": {
             "type": "object",
             "properties": {
+                "buffer_size": {
+                    "type": "integer",
+                    "example": 20971520
+                },
                 "connections_limit": {
                     "type": "integer",
                     "example": 0
